# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  11 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fix seedcache output so it fits in 80 columns.

  08 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  We should likely install baselayout before anything else, including the
  package manager. As such, I've moved it to after sys-apps/baselayout is
  installed.

  08 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Check for a snapshot in the overlay and error if one is present. This should
  ensure that the snapshot on the CD is the same as the one used to build the
  ISO.

  06 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Added a small patch from Tim Yamin <tim.yamin@zonbu.com> to fix make.conf
  parsing of variables with numbers in them. This is catalyst 2.0.6_pre17 for
  testing.

  06 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Change back to using sys-apps/baselayout. We'll need to come up with a
  better permanent solution now that virtual/baselayout is no more.

  05 Apr 2008; Andrew Gaffney <agaffney@gentoo.org>
  -livecd/cdtar/grub-memtest86+-cdtar.tar.bz2:
  Update the grub cdtar for grub-0.97-r5 and memtest86+-2.01

  05 Apr 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Use menu.lst for grub config, since 0.96 and higher won't use grub.conf
  for eltorito

  04 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> +TODO,
  modules/generic_stage_target.py, targets/support/livecdfs-update.sh:
  Added TODO. Changed create_handbook_icon call to only be called if
  /docs/handbook/index.html exists on the disk or in livecd/overlay.

  30 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh: