@@ -7,9 +7,10 @@ case $1 in
 	build_packages)
 		shift
 		export clst_packages="$*"
-		mkdir -p ${clst_chroot_path}/usr/livecd
+		mkdir -p ${clst_chroot_path}/usr/livecd ${clst_chroot_path}/tmp
 		exec_in_chroot \
 			${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
+		echo "${clst_packages}" > ${clst_chroot_path}/tmp/packages.txt
 		;;
 	clean)
 		find ${clst_chroot_path}/usr/lib -iname "*.pyc" -exec rm -f {} \;
