@@ -99,15 +99,18 @@ case $1 in
 		|| [ "${clst_livecd_type}" = "gentoo-release-universal" ]
 		then
 			# Clean out man, info and doc files
-			rm -rf usr/share/{man,doc,info}/*
+			rm -rf ${clst_chroot_path}/usr/share/{man,doc,info}/*
 			# Zap all .pyc and .pyo files
-			find usr/lib -iname "*.py[co]" -exec rm -f {} \;
+			find ${clst_chroot_path}/usr/lib -iname "*.py[co]" -exec rm -f {} \;
 		fi
 		# Cleanup all .a files except libgcc.a, *_nonshared.a and
 		# /usr/lib/portage/bin/*.a
-		find usr/lib -type f -iname "*.a" | grep -v 'libgcc.a' | \
-			grep -v 'nonshared.a' | grep -v '/usr/lib/portage/bin/' | \
+		find ${clst_chroot_path}usr/lib -type f -iname "*.a" | \
+			grep -v 'libgcc.a' | \
+			grep -v 'nonshared.a' | \
+			grep -v '/usr/lib/portage/bin/' | \
 			grep -v 'libgcc_eh.a' | xargs rm -f
+		rm -f ${clst_chroot_path}/tmp/packages.txt
 		;;
 	bootloader)
 		shift
